--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,83 @@
 
 body {
   font-family: sans-serif;
+  background-color: grey;
 }
 
 /* ***********UTILITIES************ */
+.w-big-numbers{
+  color: #fff;
+  font-size: 60px;
+}
+.w-normal-numbers{
+  color: #fff;
+  font-size: 35px;
+}
+.w-small-numbers{
+  color: #fff;
+  font-size: 20px;
+}
+.m-x{
+  margin: 0 10px;
+}
 
 /* ***********CONTENT************ */
+.container {
+  max-width: 576px;
+  margin: 30px auto;
+  border: 5px solid black;
+
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color:darkslateblue;
+  border-bottom: 5px solid black;
+}
+.header .left {
+  font-size: 50px;
+  font-weight: 600;
+}
+.header .right {
+  margin: auto 0;
+}
+.header .right button{
+  height: 50px;
+  padding: 10px;
+  font-weight: 900;
+  border: 5px solid black;
+}
+.header .right button:hover {
+  cursor: pointer;
+  transition: 600ms;
+  transform: scale(110%)
+}
+.header .right button:active {
+  transition: 100ms;
+  filter: brightness(50%);
+}
+.content {
+  background-image: url(https://images-na.ssl-images-amazon.com/images/I/21dVVYOgirL.png);
+  background-size: cover;
+  height: 512px;
+  padding: 10px;
+}
+.footer {
+  padding: 10px;
+  border-top: 5px solid black;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer .left a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.content2 {
+  background-image: url(https://opengameart.org/sites/default/files/512x512_blue_nebula_2.png);
+  background-size: cover;
+  height: 512px;
+  padding: 10px;
+}
